# code

./: .gitignore  README.md
aether_lang/: IMPLEMENTATION_GUIDE.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  README.md  ROADMAP.md  STANDARD_LIBRARY.md  analysis_report.md  specification.md  test.aether  test2.aether  test3.aether  test4.aether  test_opt.aether  test_print.aether
aether_lang/compiler/: Cargo.toml  README.md
aether_lang/compiler/src/: config.rs  error.rs  lib.rs  main.rs
aether_lang/compiler/src/ast/: mod.rs
aether_lang/compiler/src/codegen/: mod.rs
aether_lang/compiler/src/ir/: mod.rs
aether_lang/compiler/src/lexer/: mod.rs
aether_lang/compiler/src/optimizer/: mod.rs
aether_lang/compiler/src/parser/: mod.rs
aether_lang/compiler/src/runtime/: mod.rs
aether_lang/compiler/src/sema/: borrow_check.rs  mod.rs
aether_lang/docs/: STANDARD_LIBRARY.md
aether_lang/examples/: borrow_test.aether  data_pipeline.aether  fibonacci.aether  hello.aether  quicksort.aether  simple_test.aether  web_server.aether
aether_lang/examples/ecommerce_microservice/: README.md
aether_lang/libs/: standard_library.md
aether_lang/pycompiler/: aetherc.py
aether_lang/pycompiler/aether/: compiler.py
aether_lang/tools/apm/: README.md
aether_lang/tools/compiler/: architecture.md
aether_lang/tools/lsp/: specification.md
